tests/ui/discord-frontend/entity_macro/expected_literal_12.stderr
error: unexpected end of input, expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_12.rs:40:24
   |
LL |     relates = [multiple]
   |                        ^

error: aborting due to 1 previous error

